--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "brainhack_western"
+name = "calendar_stack"
 version = "0.1.0"
 description = "Utility for determining overlapping scheduled events"
 authors = ["Peter Van Dyken"]
@@ -9,9 +9,15 @@ license = "MIT"
 python = "^3.8"
 networkx = "^2.6.3"
 PyYAML = "^5.4.1"
+attrs = "^21.2.0"
+cattrs = "^1.8.0"
 
 [tool.poetry.dev-dependencies]
+poethepoet = "^0.10.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poe.tasks]
+make = { shell = "cp -r calendar_stack dist/ && python -m pip install . --target ./dist && rm -rf dist/*.dist-info && python -m zipapp -p \"/usr/bin/env python3\" dist -o calendar_stack.pyz && cp calendar_stack.pyz \"calendar_stack.sh\" && rm -rf dist/" }
