--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,11 +12,13 @@ PyYAML = "^5.4.1"
 attrs = "^21.2.0"
 cattrs = "^1.8.0"
 
-[tool.poetry.dev-dependencies]
-poethepoet = "^0.10.0"
-
 [tool.poetry.scripts]
 calendar-stack = "calendar_stack.calendar_stack:main"
+
+[tool.poetry.group.dev.dependencies]
+black = "^22.10.0"
+isort = "^5.10.1"
+poethepoet = "^0.10.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
